# FindFraud

./: .gitignore  README.md  pyproject.toml
data/: synthetic_transactions.csv
src/findfraud/: __init__.py  api.py  cli.py  data_loader.py  features.py  graph_builder.py  graph_model.py  model.py  report.py  rules.py  scorer.py
