[project]
name = "findfraud"
version = "0.1.0"
description = "Transaction anomaly detection with ML and rules"
authors = [{name = "FindFraud Team"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "shap>=0.45",
    "joblib>=1.3",
    "fastapi>=0.111",
    "uvicorn>=0.23",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
report = ["weasyprint>=62.0"]
graph = [
    "torch>=2.1.0",
    "torch-geometric>=2.5.0",
]

[project.urls]
Homepage = "https://example.com/findfraud"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["findfraud"]
